@@ -36,6 +36,7 @@ version 2.10.7:
 	* Display farewell messages in a different colour to distinguish
 	  them from normal messages.
 	* Add support for typing notification.
+	* Add support for the Relationship Status profile attribute.
 
 	Yahoo!:
 	* Fix a double-free in profile/picture loading code. (Mihai Serban)
